DatePicker, Select Deportes y Eliminar Jugador en vista de cada jugador - 15-1-20

--- a/src/theme/jugador.css
+++ b/src/theme/jugador.css
@@ -4,6 +4,9 @@
 .native-input.sc-ion-input-md {
     font-size: 20px;
 }
+ion-datetime {
+    font-size: 20px;
+}
 .botonJugador {
     display: block;
 }
