--- a/src/theme/listado.css
+++ b/src/theme/listado.css
@@ -1,7 +1,7 @@
-﻿.datos{
+﻿#contenido .datos{
     color:dimgrey;
 }
-.select-disabled{
+#filtros .select-disabled{
     display: none;
 }
 #filtros{
