--- a/src/theme/asistencia.css
+++ b/src/theme/asistencia.css
@@ -7,3 +7,22 @@
     width: 150px;
     height: 100px;
 }
+
+#textoJugadores {
+    margin-top: 20px;
+    font-size: 30px;
+    text-align: center;
+    display: block;
+}
+
+.botonJugadores {
+    display: block;
+    margin-top: 50px;
+    margin-left: 25%;
+    margin-right: 25%;
+}
+
+.botonJugador {
+    display: block;
+    /*width: 160px;*/
+}
