--- a/src/theme/logIn.css
+++ b/src/theme/logIn.css
@@ -39,6 +39,13 @@
     margin: 20px auto 0;
 }
 
+#guardarUser {
+    font-size: 20px;
+    text-align: center;
+    display: block;
+    margin: 20px auto 0;
+}
+
 .CB{
     margin-left:10px;
 }
